--- a/Template.Web/Features/Richiesta/Richiesta.cshtml
+++ b/Template.Web/Features/Richiesta/Richiesta.cshtml
@@ -24,10 +24,13 @@
             <i class="bi bi-house-door"></i> Torna alla Home
         </a>
 
+        @if (User.IsInRole("Dipendente"))
+        {
+            <div class="d-flex justify-content-end">
+                <button onclick="window.location.href='@Url.Action("RichiesteInArrivo", "Richiesta")'" class="btn btn-primary btn-mg">Verifica stato delle richieste</button>
+            </div>
+        }
 
-        <div class="d-flex justify-content-end">
-            <button onclick="window.location.href='@Url.Action("RichiesteInArrivo", "Richiesta")'" class="btn btn-primary btn-mg">Verifica stato delle richieste</button>
-        </div>
 
 
         <h1 class="text-left mb-4">Richiesta Permessi/Ferie</h1>
